Github icon added, font-awesome added

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </head>
     <body>
 			
-			<div>
+			<div class="container">
 			  <header>
 			    <h2>SEND YOs TO <code><small><span class="glyphicon glyphicon-user"></span> </small> YOCOOLURL</code></h2>
 			    <section>
@@ -48,8 +48,10 @@
 			    </section>
 			  </header>
 			  <a href="#" id="yo">YO</a>
-
+			
 			</div> 
+						<footer><a href="https://github.com/LukyVj/cool-YOrl/"><span class="fa fa-github"></span> Fork me </a> </footer>
+
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
