Update animation css

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			  <a href="#" id="yo">YO</a>
 			
 			</div> 
-						<footer><a href="https://github.com/LukyVj/cool-YOrl/"><span class="fa fa-github"></span> Fork me </a> </footer>
+						<footer><a href="http://lukyvj.github.io/YO-COOL-URL/"><span class="fa fa-github"></span> Fork me </a> </footer>
 
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
